Fixed the 100% height spacing issue, really proud, also practically finished w iteration 1

--- a/src/App.less
+++ b/src/App.less
@@ -26,6 +26,15 @@
   color: white;
 }
 
+html,
+body,
+#root,
+.App,
+.ant-layout,
+.page {
+  height: 100%;
+}
+
 .App-link {
   color: #61dafb;
 }
